changed index file

--- a/index.html
+++ b/index.html
@@ -837,8 +837,9 @@
                         <a
                           href="#"
                           class="text-decoration-none text-dark p-2 not-a"
-                          >Last Month</a
                         >
+                          Last Month
+                        </a>
                       </li>
                     </ul>
                   </div>
